@@ -5,7 +5,7 @@
     <parent>
         <groupId>ch.ivyteam.ivy</groupId>
         <artifactId>parentIvyMavenPOM</artifactId>
-        <version>1.2.12.0</version>
+        <version>1.2.16.0</version>
     </parent>
     <groupId>ch.ivyteam.ivy.addons</groupId>
     <artifactId>IvyAddons</artifactId>
